k8s-manifests/fastapi-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-service
  namespace: default
  labels:
    app: fastapi-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8000"
spec:
  selector:
    app: fastapi-app
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
  type: ClusterIP
